<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">StoryTeller</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_game_title_text">StoryTeller!</string>
    
    
    
    
    <string name="new_story_button_text">New Story!</string>
    <string name="load_story_button_text">Load Story</string>
    
   
    <string name="new_story_dialog_text">Create your Story!</string>
    
    
    <string name="create_story_button_text">Create!</string>
    <string name="cancel_story_button_text">Cancel</string>
    <string name="main_text_story_create_screen">Name Your Story!</string>
    
    
    <string name="new_story_title_text">New Story</string>
	<string name="add_story_node_button_text">Add</string>
	<string name="delete_story_node_button_text">Delete</string>
    <string name="add_text_to_story_node_button_text">Add Text</string>
    <string name="add_gps_to_story_node_button_text">Add GPS</string>
    <string name="add_picture_to_story_node_button_text">Add Picture</string>
    <string name="add_button_to_story_node_button_text">Add Button</string>
    <string name="save_story_button_text">Save</string>
    <string name="back_to_main_menu_button_text">Main Menu</string>
    
    
    
    
     <string name="default_node_name_text">Add Button</string>
     <string name="default_selected_node_name_text">Untitled</string>
     
     <string name="node_list_icon_description">Image Description</string>
     
     <string name="new_node_dialog_title_text">New Node:</string>
     <string name="default_node_button_text">Click Me!</string>
     <string name="delete_content_element_text">Delete</string>
    
</resources>
